--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -21,37 +21,37 @@
         <form class="row g-3">
           <div class="col-md-12" id="icon">
             <label for="email_institucional" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" > 
+            <input type="email" class="form-control email_institucional"> 
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba ">
+            <input type="text" class="form-control nome_da_instituicao">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="cnpj" class="form-label">CNPJ</label>
-            <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68">
+            <input type="text" class="form-control cnpj">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564">
+            <input type="text" class="form-control telefone">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
             <label for="senha" class="form-label">Senha</label>
-            <input type="senha" class="form-control senha" placeholder="Nexus@5">
+            <input type="senha" class="form-control senha">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="buttons">
             <div class="col-md-3">
-              <button id="primeiro_botao" type="submit"><a href="../../index.html">CANCELAR</a></button>
+              <a href="../../index.html"><button id="primeiro_botao" type="button">CANCELAR</button></a>
           </div>
 
           <div class="col-md-3">
-            <button id="segundo_botao" type=""><a href="../../index.html">SALVAR</a></button>
+            <a href="../../index.html"><button id="segundo_botao" type="button">SALVAR</button></a>
           </div>
           </div>
           
