--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -22,30 +22,30 @@
 
       <div class="col-md-12">
         <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-        <input type="text" class="form-control numero_do_cartao">
+        <input type="text" class="form-control numero_do_cartao" placeholder="xxxx xxxx xxxx xxxx">
       </div>
 
       <div class="col-md-12">
         <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-        <input type="text" class="form-control nome_no_cartao">
+        <input type="text" class="form-control nome_no_cartao" placeholder="xxxxxxxx xxxxxxxx">
       </div>
 
       <div class="col-md-6 for-cnp">
         <label for="validade" class="form-label">Validade</label>
-        <input type="text" class="form-control validade">
+        <input type="text" class="form-control validade" placeholder="xx/xx">
       </div>
 
       <div class="col-md-6">
         <label for="cvv" class="form-label">CVV</label>
-        <input type="text" class="form-control cvv">
+        <input type="text" class="form-control cvv" placeholder="xxx">
       </div>
 
       <div class="buttons">
         <div class="col-md-3 primeiro_botao"> 
-          <button id="segundo_botao" type="submit"><a href="../../../instituicao/index.html">CANCELAR</a></button>
+          <a href="../../../instituicao/index.html"><button id="segundo_botao" type="button">CANCELAR</button></a>
         </div>
         <div class="col-md-3 primeiro_botao">
-         <button id="primeiro_botao" type="submit"> <a href="./editar/index.html">EDITAR</a></button>
+         <a href="./editar/index.html"><button id="primeiro_botao" type="button">EDITAR</button></a>
         </div>
       </div>
 
