--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -156,17 +156,17 @@
 
             <div class="col-md-12 lab-inp">
                 <label for="nome_do_usuario" class="form-label">Nome do usuário</label>
-                <input type="text" class="form-control nome_do_usuario" placeholder="unicuritiba@gmail.com">
+                <input type="text" class="form-control nome_do_usuario">
             </div>
 
             <div class="col-md-6 lab-inp">
                 <label for="email_usuario" class="form-label">Email do usuário</label>
-                <input type="email" class="form-control email_usuario" placeholder="Universidade De Curitiba ">
+                <input type="email" class="form-control email_usuario">
             </div>
 
             <div class="col-md-6 lab-inp">
-                <label for="data-termino" class="form-label">data-termino</label>
-                <input type="text" class="form-control senha" placeholder="42.591.538/0001-68">
+                <label for="senha" class="form-label">Senha</label>
+                <input type="text" class="form-control senha">
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -237,60 +237,6 @@
                 </div>
 
                 <div class="col-md-3">
-                    <button id="segundo_botao" type="button" onclick="showModalEditar()">EDITAR</button>
-                </div>
-
-                <div class="col-md-6">
-                    <button id="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
-                </div>
-            </div>
-
-        </form>
-
-    </div>
-
-    <div class="container mt-5 container modal modal-editar">
-        <h1>NOME DA TURMA</h1>
-        <form class="row g-7">
-
-            <div class="col-md-12 lab-inp" id="icon">
-                <label for="turma" class="form-label">Turma</label>
-                <input type="text" class="form-control turma" placeholder="unicuritiba@gmail.com">
-                <i class="fa fa-edit" style="font-size:24px"></i>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="icon">
-                <label for="numero-estudantes" class="form-label">Número de estudantes</label>
-                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba ">
-                <i class="fa fa-edit" style="font-size:24px"></i>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="icon">
-                <label for="curso-inp" class="form-label">Curso</label>
-                <input type="text" class="form-control curso-inp" placeholder="42.591.538/0001-68">
-                <i class="fa fa-edit" style="font-size:24px"></i>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="icon">
-                <label for="data-inicio" class="form-label">Data de inicio do curso</label>
-                <input type="date" class="form-control data-inicio" placeholder="42.591.538/0001-68">
-            </div>
-
-            <div class="col-md-6 lab-inp" id="icon">
-                <label for="data-termino" class="form-label">Data de termino do curso</label>
-                <input type="date" class="form-control data-termino" placeholder="42.591.538/0001-68">
-            </div>
-
-            <div class="buttons">
-                <div class="col-md-3">
-                    <button id="primeiro_botao" type="button" onclick="exitModalTurma()">SAIR</button>
-                </div>
-
-                <div class="col-md-3">
-                    <button id="segundo_botao" type="button" onclick="">EDITAR</button>
-                </div>
-
-                <div class="col-md-6">
                     <button id="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
                 </div>
             </div>
