--- a/instituicao/usuarios/vizualizacao/index.html
+++ b/instituicao/usuarios/vizualizacao/index.html
@@ -234,20 +234,15 @@
     </div>
 
     <div class="container mt-5 container modal modal-excluir" id="modal-excluir">
-        <h1>Deseja excluir esse usuário?</h1>
+        <h1>DESEJA EXCLUIR ESSE USUARIO?</h1>
         <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
-        <div>
-            <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
-            <input type="password" class="form-control senha-label" placeholder="Nexus@5">
-        </div>
-
         <div class="buttons">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <button id="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <button id="primeiro_botao" type="button" onclick="exitchangeModalExcluir()">CONFIRMAR</button>
             </div>
         </div>
