--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -19,35 +19,35 @@
 
           <div class="col-md-12" id="icon">
             <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-            <input type="text" class="form-control numero_do_cartao" placeholder="1234 5678 9101 1213">
+            <input type="text" class="form-control numero_do_cartao">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-12" id="icon">
             <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-            <input type="text" class="form-control nome_no_cartao" placeholder="Alice Pereira">
+            <input type="text" class="form-control nome_no_cartao">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-6" id="icon">
             <label for="validade" class="form-label">Validade</label>
-            <input type="text" class="form-control validade" placeholder="02/29">
+            <input type="text" class="form-control validade">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="col-md-6" id="icon">
             <label for="cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control cvv" placeholder="123">
+            <input type="text" class="form-control cvv">
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
 
           <div class="buttons">
             <div class="col-md-3">
-            <button id="primeiro_botao" type="submit"><a href="../index.html">CANCELAR</a> </button>
+            <a href="../index.html"><button id="primeiro_botao" type="button">CANCELAR</button></a> 
           </div>
 
           <div class="col-md-3">
-            <button id="segundo_botao" type=""><a href="../../../index.html">SALVAR</a></button>
+            <a href="../../../index.html"><button id="segundo_botao" type="button">SALVAR</button></a>
           </div>
           </div>
           
